...
            android:text="@string/txt_invalid_credentials"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_connect"
            android:layout_marginTop="15dp"
            android:textColor="#FFF"
            android:background="@drawable/rec_gradient"
            android:textAllCaps="false"
            android:text="@string/signIn"
            android:layout_width="match_parent"
...
